# wayfare

./: README.md
.entur/security/: codescan.yml
.github/: dependabot.yml
.github/workflows/: codeql.yml  tanstack-start-security.yml
bffs/python-fastapi/: pyproject.toml
clients/tanstack-start/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
clients/tanstack-start/scripts/: preprocess-fare-zones.mjs  preprocess-stops.mjs
clients/tanstack-start/src/: routeTree.gen.ts  styles.css
clients/tanstack-start/src/components/: EnvToggle.tsx  Footer.tsx  Header.tsx  ThemeToggle.tsx
clients/tanstack-start/src/context/: dev-config.tsx  profile.tsx  search-form.tsx
clients/tanstack-start/src/hooks/: use-customers.ts  use-env-mode.ts  use-payments.ts  use-recurring-payments.ts
clients/tanstack-start/src/lib/: build-request.ts  dev-config-storage.ts  favorites-storage.ts  offer-query.ts  payment-methods-storage.ts  profile-storage.ts  recent-searches-storage.ts  search-session.ts  ticket-storage.ts  travel-party.ts  trip-session.ts  zone-utils.ts
clients/tanstack-start/src/routes/: __root.tsx  index.tsx  map.tsx  offers.tsx  payment-return.tsx  profile.tsx  settings.tsx  trips.tsx
clients/tanstack-start/src/server/: auth.ts  middleware.ts  omsa-client.ts  (+2 more)
clients/tanstack-start/src/server-functions/: customers.ts  dev-config.ts  documents.ts  fare-zones.ts  geocoder.ts  health.ts  payments.ts  purchase.ts  recurring-payments.ts  search.ts  stop-places.ts  trip-planner.ts
docs/: node-dependency-security.md
(+47 files in other folders)
