[project]
name = "omsa_demo_bff"
version = "0.1.0"
description = "FastAPI backend-for-frontend for the OMSA travel Flutter demo"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "cachetools>=5.3.0,<6.0.0",
]

[project.urls]
Homepage = "https://github.com/entur/omsa-example-clients"

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "anyio>=4.4.0,<5.0.0",
]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000
reload = true
